Styled: CTA button, red column layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Petsmart</title>
   <link rel="stylesheet" href="trouble.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="styles.css">
 </head>
 <style>
@@ -16,7 +19,7 @@
     <tr>
       <td>
         <!-- main table -->
-        <table align="center" cellpadding="0" cellspacing="0" width="600" class="main">
+        <table align="center" cellpadding="0" cellspacing="0" width="640" class="main">
           <tr>
             <td align="center">
               <!-- start of email -->
@@ -36,7 +39,7 @@
                 </tr>
               </table>
               <!-- END EMAIL TABLE -->
-              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="hero">
+              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="bg-main hero">
                 <tr>
                   <td>
                     <img src="img/petsmart-hero.jpg" alt="" class="hero-img">
@@ -44,31 +47,102 @@
                 </tr>
               </table>
               <!-- END HERO TABLE -->
-              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="hero-cta">
+              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="bg-main hero-cta">
                 <tr>
                   <td align="center" class="txt-row">
                     <p class="special-txt txt">on your next merchandise or pet services purchase of $45 or more</p>
                   </td>
                 </tr>
                 <tr>
-                  <td align="center" width="100%" class="sep">
-
+                  <td align="center" width="100%" class="">
+                    <p class="special-txt date">now thru 12/23*</p>
                   </td>
                 </tr>
-
-
-
-
-
-
               </table>
-              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="cta-btn border">
-                <!-- new secion -->
+              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="bg-main cta-btn">
+                <tr>
+                  <td align="center" class="">
+                    <div class="left-btn">
+                      <!-- table -->
+                      <table class="button-tbl">
+                        <tr>
+                          <td align="center" style="height: 50px;" height="50">
+                            <a href="#" class="link">get in-store coupon</a>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="right-btn">
+                      <!-- table -->
+                      <table class="button-tbl">
+                        <tr>
+                          <td align="center" style="height: 50px;" height="50">
+                            <a href="#" class="link right-link">shop now</a>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="discount">
+                    <div class="discount-code">
+                      <p class="special-txt code">use promo code: EN-45R5DO7VX35H</p>
+                    </div>
+                  </td>
+                </tr>
               </table>
               <!-- END CTA SECTION -->
+              <div class="col-2-red" style="width: 100%">
+                <table width="100%"" cellpadding="0" cellspacing="0" align="center">
+                  <tr>
+                    <td align="center">
+                      <div class="div-img">
+                        <img src="img/red-header.jpg" alt="">
+                      </div>
+                    </td>
+                  </tr>
+                  <table width="100%"" cellpadding="0" cellspacing="0" align="center">
+                    <tr>
+                      <td class="">
+                        <tr>
+                          <td class="">
+                            <div class="div-img">
+                              <img src="img/red-free-delivery.jpg" alt="">
+                            </div>
+                          </td>
+                          <td class="">
+                            <div class="div-img">
+                              <img src="img/red-curbside.jpg" alt="">
+                            </div>
+                          </td>
+                        </tr>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="">
+                        <tr>
+                          <td class="">
+                            <div class="div-img">
+                              <img src="img/red-autoship.jpg" alt="">
+                            </div>
+                          </td>
+                          <td class="">
+                            <div class="div-img">
+                              <img src="img/red-ship-home.jpg" alt="">
+                            </div>
+                          </td>
+                        </tr>
+                      </td>
+                    </tr>
+                  </table>
+                </table>
+                <!-- END RED TABLE -->
+              </div>
             </td>
           </tr>
         </table>
+        <!-- END MAIN TABLE -->
       </td>
     </tr>
   </table>
