Modified, index/responsive

--- a/index.html
+++ b/index.html
@@ -4,147 +4,302 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Petsmart</title>
-  <link rel="stylesheet" href="trouble.css">
+  <title>Document</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet"> 
+  <!--[if mso]>
+    <style>
+        table {border-collapse:collapse;border-spacing:0;border:none;margin:0;}
+        div, td {padding:0;}
+        div {margin:0 !important;}
+    </style>
+    <noscript>
+        <xml>
+            <o:OfficeDocumentSettings>
+            <o:PixelsPerInch>96</o:PixelsPerInch>
+            </o:OfficeDocumentSettings>
+        </xml>
+    </noscript>
+    <![endif]-->
+  <style type=text/css>
+    body {
+      background-color: aqua;
+      font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+      margin: 0;
+    }
+    table {
+      border-spacing: 0;
+    }
+    td {
+      font-size: 0;
+      padding: 0;
+    }
+    img {
+      border: 0;
+    }
+    p {
+      margin: 0;
+    }
+    a {
+      text-decoration: none;
+    }
+    .wrapper {
+      width: 100%;
+      table-layout: fixed;
+      background-color: ""; /* ADD BACKGROUND COLOR */
+      padding-bottom: 40px;
+    }
+    .main {
+      background-color: #fff;
+      border: 1px solid magenta;
+      margin: 0 auto;
+      width: 100%;
+      max-width: 640px;
+      border-spacing: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      color: #4a4a4a;
+    }
+    .button {
+      background-color: #003B49;
+      color: #FFFFFF;
+      text-decoration: none;
+      /* padding: 15px 0; */
+      border-radius: 12px;
+      font-weight: 700;
+      text-align: center;
+      font-size: 16px;
+      padding: 15px 20px;
+    }
+    .two-columns {
+      display: inline;
+      text-align: center;
+      vertical-align: top;
+    }
+    .column {
+      display: inline-block;
+    }
+    .right-col {
+      padding-left:80px;
+    }
+    .footer {
+      /* display: inline-block; */
+      width: 100%;
+      max-width: 640px;
+    }
+    .footer-row {
+      width: 100%;
+      padding: 10px;
+    }
+    .hide {
+      display: inline-block;
+    }
+    @media screen and (max-width: 640px) {
+      .button {
+        margin-bottom: 10px;
+      }
+      .right-col {
+      padding-left: 0px;
+      }
+      .know-us {
+        margin: 0 auto;
+      }
+      .hide {
+        display: none;
+      }
+    }
+  </style>
 </head>
-<style>
-
-</style>
 <body>
-  <table cellpadding="0" cellspacing="0" role="presentation" marginwidth="0" marginheight="0" bottommargin="0" leftmargin="0" rightmargin="0" topmargin="0" valign="top" style="width: 100%;">
-    <tr>
-      <td>
-        <!-- main table -->
-        <table align="center" cellpadding="0" cellspacing="0" width="640" class="main">
-          <tr>
-            <td align="center">
-              <!-- start of email -->
-              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="header">
-                <tr>
-                  <td width="50%" class="logo">
-                    <img src="img/petsmart-logo.png" alt="Petsmart logo">
-                  </td>
-                  <td width="50%" class="" style="float: right;">
-                    <div class="right" style="float: right;">
-                      <div class="top-heart">
-                        <img src="img/petsmart-treats.png" alt="" class="header-heart">
-                      </div>
-                      <div class="user">hi, Darryl</div>
-                    </div>
-                  </td>
-                </tr>
-              </table>
-              <!-- END EMAIL TABLE -->
-              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="bg-main hero">
-                <tr>
-                  <td>
-                    <img src="img/petsmart-hero.jpg" alt="" class="hero-img">
-                  </td>
-                </tr>
-              </table>
-              <!-- END HERO TABLE -->
-              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="bg-main hero-cta">
-                <tr>
-                  <td align="center" class="txt-row">
-                    <p class="special-txt txt">on your next merchandise or pet services purchase of $45 or more</p>
-                  </td>
-                </tr>
-                <tr>
-                  <td align="center" width="100%" class="">
-                    <p class="special-txt date">now thru 12/23*</p>
-                  </td>
-                </tr>
-              </table>
-              <table align="center" cellpadding="0" cellspacing="0" width="100%" class="bg-main cta-btn">
-                <tr>
-                  <td align="center" class="">
-                    <div class="left-btn">
-                      <!-- table -->
-                      <table class="button-tbl">
-                        <tr>
-                          <td align="center" style="height: 50px;" height="50">
-                            <a href="#" class="link">get in-store coupon</a>
-                          </td>
-                        </tr>
-                      </table>
-                    </div>
-                    <div class="right-btn">
-                      <!-- table -->
-                      <table class="button-tbl">
-                        <tr>
-                          <td align="center" style="height: 50px;" height="50">
-                            <a href="#" class="link right-link">shop now</a>
-                          </td>
-                        </tr>
-                      </table>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="discount">
-                    <div class="discount-code">
-                      <p class="special-txt code">use promo code: EN-45R5DO7VX35H</p>
-                    </div>
-                  </td>
-                </tr>
-              </table>
-              <!-- END CTA SECTION -->
-              <div class="col-2-red" style="width: 100%">
-                <table width="100%"" cellpadding="0" cellspacing="0" align="center">
+  <center class="wrapper">
+    <table class="main" width="100%">
+      <!-- HEADER -->
+      <tr>
+        <td>
+          <table width="100%">
+            <tr>
+              <td style="padding: 25px;">
+                <!-- LOGO -->
+                <img src="img/petsmart-logo.png" alt="Petsmart logo" width="130">
+              </td>
+              <td style="padding-right: 20px;text-align: right;">
+                <img src="img/petsmart-treats.png" alt="" class="header-heart">
+                <p style="font-size: 14px;font-weight: 700;color: #98999b;margin: 0;padding-top: 6px;text-align: right;">hi, Ciera</p>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <!-- HERO -->
+      <tr>
+        <td>
+          <table style="background-color: #D2EAF4;" width="100%">
+            <tr>
+              <td>
+                <a href="#"><img src="img/petsmart-hero.jpg" alt="" width="640" style="max-width: 100%;"></a>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding: 0 50px;text-align: center;">
+                <p style="color:#E35B67;font-size: 30px;">on your next merchandise or pet services purchase of $45 or more</p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding: 15px;text-align: center;">
+                <p style="color:#E35B67;font-size: 18px;font-weight:300;">now thru 12/23*</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <table  style="text-align: center;" width="100%">
                   <tr>
-                    <td align="center">
-                      <div class="div-img">
-                        <img src="img/red-header.jpg" alt="">
-                      </div>
+                    <td class="two-columns">
+                      <tr>
+                        <td>
+                          <table class="column">
+                            <tr>
+                              <td class="padding">
+                                <table style="width:220px;">
+                                  <tr>
+                                    <td>
+                                      <a href="#">
+                                        <p class="button">get in-store coupon</p>
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table><table class="column right-col">
+                            <tr>
+                              <td class="padding">
+                                <table style="width:220px;">
+                                  <tr>
+                                    <td>
+                                      <a href="#">
+                                        <p class="button">shop now</p>
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
                     </td>
                   </tr>
-                  <table width="100%"" cellpadding="0" cellspacing="0" align="center">
-                    <tr>
-                      <td class="">
-                        <tr>
-                          <td class="">
-                            <div class="div-img">
-                              <img src="img/red-free-delivery.jpg" alt="">
-                            </div>
-                          </td>
-                          <td class="">
-                            <div class="div-img">
-                              <img src="img/red-curbside.jpg" alt="">
-                            </div>
-                          </td>
-                        </tr>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="">
-                        <tr>
-                          <td class="">
-                            <div class="div-img">
-                              <img src="img/red-autoship.jpg" alt="">
-                            </div>
-                          </td>
-                          <td class="">
-                            <div class="div-img">
-                              <img src="img/red-ship-home.jpg" alt="">
-                            </div>
-                          </td>
-                        </tr>
-                      </td>
-                    </tr>
-                  </table>
+                </table><!-- end buttons -->
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <table width="100%">
+                  <tr>
+                    <td style="padding: 15px;padding-top: 15px;text-align: center;">
+                      <p style="color:#E35B67;font-size: 18px;font-weight:300;">use promo code: EN-45R5DO7VX35H</p>
+                    </td>
+                  </tr>
                 </table>
-                <!-- END RED TABLE -->
-              </div>
-            </td>
-          </tr>
-        </table>
-        <!-- END MAIN TABLE -->
-      </td>
-    </tr>
-  </table>
+              </td>
+            </tr>
+          </table><!-- end hero table -->
+        </td>
+      </tr>
+      
+      <!-- 2 COL SHOPPING SECTION -->
+      <tr>
+        <td>
+          <table style="background-color: #D80015;" width="100%">
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td>
+                      <img src="img/red-header.jpg" alt="" style="width: 100%; max-width: 640px;">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td>
+                      <img src="img/red-free-delivery.jpg" alt="" style="width: 100%; max-width: 320px;">
+                    </td>
+                    <td>
+                      <img src="img/red-curbside.jpg" alt="" style="width: 100%; max-width: 320px;">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="img/red-autoship.jpg" alt="" style="width: 100%; max-width: 320px;">
+                    </td>
+                    <td>
+                      <img src="img/red-ship-home.jpg" alt="" style="width: 100%; max-width: 320px;">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+
+      <!-- FOOTER -->
+      <tr>
+        <td>
+          <table width="100%" class="footer">
+            <tr>
+              <td class="footer-row">
+                <table width="100%" style="max-width: 340px;" class="know-us">
+                  <tr>
+                    <td style="text-align: center;padding: 10px;">
+                      <p style="color: #00bced;font-weight: 700;font-size: 14px;">get to <br class="hide"> know us!</p>
+                    </td>
+                    <td style="text-align: center;">
+                      <img src="img/app-store.png" alt="" style="width: 96px;">
+                      <img src="img/g-play-store.png" alt="" style="width: 96px;">
+                      <p style="color: #002d3f;font-size: 14px;font-weight: 400;text-align: center;">download the <strong>FREE</strong> PetSmart app</p>
+                    </td>
+                  </tr>
+                </table>
+                <table style="float:right; width:230px;">
+                  <tr>
+                    <td width="33%" valign="middle" align="center">
+                      <img src="img/treats-footer.png" alt="" style="height: 30px;">
+                      <p>loyalty</p>
+                    </td>
+                    <td width="33%" valign="middle" align="center">
+                      <img src="img/social-instagram.png" alt="" style="height: 30px;">
+                      <p>social</p>
+                    </td>
+                    <td width="33%" valign="middle" align="center">
+                      <img src="img/location-pin.png" alt="" style="height: 30px;">
+                      <p>location</p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+
+      <!-- SECTION -->
+      <tr>
+        <td>
+          <table>
+            <tr>
+              <td></td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+
+    </table> <!-- END MAIN TABLE -->
+  </center>
 </body>
 </html>
