--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
         width: 100% !important;
         display: block !important;
       }
+      td.block {
+        padding-bottom: 20px;
+      }
       .hide {
         display: none;
       }
