Removed comments for email deliverability

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     .wrapper {
       width: 100%;
       table-layout: fixed;
-      background-color: ""; /* ADD BACKGROUND COLOR */
       padding-bottom: 40px;
     }
     .main {
@@ -178,18 +177,16 @@
 <body>
   <center class="wrapper">
     <table class="main" width="100%">
-      <!-- HEADER -->
       <tr>
         <td>
           <table width="100%">
             <tr>
               <td style="padding: 20px 20px 30px 20px;">
-                <!-- LOGO -->
                 <img src="img/petsmart-logo.png" alt="Petsmart logo" width="130">
               </td>
               <td style="padding-right: 20px;text-align: right;">
                 <img src="img/petsmart-treats.png" alt="" class="header-heart">
-                <p style="font-size: 14px;font-weight: 700;color: #98999b;margin: 0;padding-top: 10px;text-align: right;">hi, Ciera</p>
+                <p style="font-size: 14px;font-weight: 700;color: #98999b;margin: 0;padding-top: 10px;text-align: right;">hi, Darryl</p>
               </td>
             </tr>
           </table>
@@ -311,7 +308,6 @@
           </table>
         </td>
       </tr>
-      <!-- FOOTER -->
       <tr>
         <td>
           <table width="100%" class="footer" align="top">
@@ -355,8 +351,6 @@
             </tr>
           </table>
         </td>
-      </tr><!-- END FOOTER -->
-      <!-- SECTION -->
       <tr>
         <td>
           <table width="100%" class="policy-footer" align="top">
@@ -383,7 +377,6 @@
           </table>
         </td>
       </tr>
-    </table> <!-- END MAIN TABLE -->
   </center>
 </body>
 </html>
